fixed collapse sizing

--- a/SeaEco.Client/wwwroot/css/app.css
+++ b/SeaEco.Client/wwwroot/css/app.css
@@ -165,9 +165,17 @@ code {
     min-width: 300px;
 }
 
-.card-container {
-    max-width: 600px;  
-    margin: auto;     
+@media (max-width: 1399.98px) {
+    .card-container {
+        max-width: 600px;
+        margin: auto;
+    }
+}
+
+
+.projects-container {
+    max-width: 1200px;
+    flex-grow: 1;
 }
 
 
